--- a/packages/klingel.yaml
+++ b/packages/klingel.yaml
@@ -71,7 +71,7 @@ automation:
             push:
               category: 'klingel'
 
-  - alias: klingel_download_last_video
+  - alias: klingel_download_last_motion_video
     trigger:
       platform: state
       entity_id: binary_sensor.ring_haustur_motion
@@ -80,8 +80,8 @@ automation:
       - service: downloader.download_file
         data_template:
           url: 'states.camera.haustur.attributes.video_url'
-          subdir: 'www/downloads'
-          filename: 'last.mpg'
+          subdir: 'front_door'
+          filename: 'last_motion.mpg'
           overwrite: true
 
   - alias: klingel_haus_notify
