download doorbell video

--- a/packages/klingel.yaml
+++ b/packages/klingel.yaml
@@ -42,6 +42,19 @@ script:
             {%- else -%}
               2
             {%- endif -%}
+  doorbell_set_random:
+    sequence:
+      - service: input_text.set_value
+        entity_id: input_text.klingel_random
+        data_template:
+          value: >-
+            {%- macro random_int(len) -%}
+              {%- for n in range(len) -%}
+                {{ [0,1,2,3,4,5,6,7,8,9]|random }}
+              {%- endfor -%}
+            {%- endmacro -%}
+            {%- set parts = [random_int(8), random_int(4), random_int(4), random_int(4), random_int(12)] -%}
+            {{ parts|join('-') }}
 
 automation:
   - alias: doorbell_open_door
@@ -100,7 +113,22 @@ automation:
           filename: 'last_motion.mp4'
           overwrite: true
 
-  - alias: klingel_haus_notify
+  - alias: doorbell_download_last_ring_video
+    trigger:
+      platform: state
+      entity_id: binary_sensor.ring_haustur_ding
+      to: 'on'
+    action:
+      - delay:
+          seconds: 90
+      - service: script.doorbell_set_random
+      - service: downloader.download_file
+        data_template:
+          url: '{{ states.camera.haustur.attributes.video_url }}'
+          subdir: 'front_door'
+          filename: '{{ states("input_text.klingel_random") }}.mp4'
+
+  - alias: doorbell_haus_notify
     trigger:
       platform: state
       entity_id: binary_sensor.ring_haustur_ding
@@ -118,7 +146,7 @@ automation:
           title: 'Klingeling...'
           message: 'Jemand wartet an der Haustür'
           data:
-            url: https://google.de # ring app url
+            url: https://google.de # ring app url, have to reverse-engineer
             push:
               category: klingel
       - condition: state
@@ -127,7 +155,7 @@ automation:
       - service: script.doorbell
       ## Licht blinken lassen
 
-  - alias: klingel_wohnung_notify
+  - alias: doorbell_wohnung_notify
     trigger:
       platform: state
       entity_id: switch.klingel
