--- a/configuration.yaml
+++ b/configuration.yaml
@@ -30,7 +30,7 @@ http:
   login_attempts_threshold: 5
 
 customizer:
-  custom_ui: hosted
+  custom_ui: local
 
 downloader:
   download_dir: 'www/downloads'
