--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -3,6 +3,7 @@ HOMEASSISTANT_LATITUDE: 50.000000
 HOMEASSISTANT_LONGITUDE: 10.000000
 HTTP_API_PASSWORD: 00000000000000000000
 LG_TV_ACCESS_TOKEN: 00000000000000000000
+LG_TV_MAC: aaaaaaaaaaaa
 MQTT_CLIENT_ID: homeassistant-1
 MQTT_PASSWORD: 00000000000000000000
 MQTT_USERNAME: user
