--- a/automations/wohnzimmer/schalter.yaml
+++ b/automations/wohnzimmer/schalter.yaml
@@ -30,3 +30,36 @@
   action:
     service: homeassistant.toggle
     entity_id: group.wz_ambiente
+
+- alias: smart_button_single_click
+  trigger:
+    platform: event
+    event_type: click
+    event_data:
+      entity_id: binary_sensor.switch_158d00013f85d3
+      click_type: single
+  action:
+    service: switch.toggle
+    entity_id: switch.sonoff_wz_2
+
+- alias: smart_button_double_click
+  trigger:
+    platform: event
+    event_type: click
+    event_data:
+      entity_id: binary_sensor.switch_158d00013f85d3
+      click_type: double
+  action:
+    service: switch.toggle
+    entity_id: switch.sonoff_wz_1
+
+- alias: smart_button_long_press
+  trigger:
+    platform: event
+    event_type: click
+    event_data:
+      entity_id: binary_sensor.switch_158d00013f85d3
+      click_type: long_click_press
+  action:
+    service: homeassistant.toggle
+    entity_id: group.wz_ambiente
