change homekit config

--- a/homekit.yaml
+++ b/homekit.yaml
@@ -2,24 +2,13 @@ filter:
   include_domains:
     - light
     - switch
+    - media_player
   include_entities:
     - script.all_off
-    - script.volumio_play
+    # - script.volumio_play
     - sensor.heizung_temperature
     - sensor.nzbget_queue_size
-    - sensor.pool_temperatur
+    # - sensor.pool_temperatur
   exclude_entities:
     - switch.klingel
-entity_config:
-  sensor.heizung_temperature:
-    name: Temperatur Wohnzimmer
-  sensor.nzbget_queue_size:
-    name: NZBGet Download Queue
-  sensor.pool_temperatur:
-    name: Wassertemperatur Pool
-  switch.beleuchtung_esszimmer:
-    name: Beleuchtung Esszimmer
-  switch.beleuchtung_flur:
-    name: Beleuchtung Flur
-  switch.beleuchtung_kueche:
-    name: Beleuchtung Küche
+    - media_player.volumio
