--- a/automations/bad.yaml
+++ b/automations/bad.yaml
@@ -47,10 +47,10 @@
     ############# Ab hier nur vor 20:00 Uhr ####################################
     - condition: time
       before: '20:00:00'
-    - service: media_player.volume_set
-      entity_id: media_player.volumio
-      data_template:
-        volume_level: 0.65
+    # - service: media_player.volume_set
+    #   entity_id: media_player.volumio
+    #   data_template:
+    #     volume_level: 0.65
     - service: media_player.play_media
       data:
         entity_id: media_player.volumio_mpd
@@ -64,10 +64,10 @@
         message: "Die Luftfeuchtigkeit im Bad ist aktuell bei {{ states.sensor.humidity_158d0001c2c57f.state }}%, bitte lüften!"
     - delay:
         seconds: 8
-    - service: media_player.volume_set
-      entity_id: media_player.volumio
-      data_template:
-        volume_level: 0.2
+    # - service: media_player.volume_set
+    #   entity_id: media_player.volumio
+    #   data_template:
+    #     volume_level: 0.2
 
 - alias: bad_zahnbuerste_laden
   trigger:
