--- a/configuration.yaml
+++ b/configuration.yaml
@@ -31,6 +31,7 @@ http:
   api_password: !secret HTTP_API_PASSWORD
   trusted_networks:
     - 192.168.10.0/24
+    - 192.168.20.0/24
   ip_ban_enabled: true
   login_attempts_threshold: 5
 
@@ -53,17 +54,17 @@ ring:
   username: !secret RING_USERNAME
   password: !secret RING_PASSWORD
 
-recorder:
-  purge_keep_days: 7
-  db_url: mysql://homeassistant@192.168.10.95/homeassistant?charset=utf8
-  exclude:
-    domains:
-      - automation
-      - updater
-    entities:
-      - sun.sun # Don't record sun data
-      - sensor.last_boot # Comes from 'systemmonitor' sensor platform
-      - sensor.date
+# recorder:
+#   purge_keep_days: 7
+#   db_url: mysql://homeassistant@192.168.10.95/homeassistant?charset=utf8
+#   exclude:
+#     domains:
+#       - automation
+#       - updater
+#     entities:
+#       - sun.sun # Don't record sun data
+#       - sensor.last_boot # Comes from 'systemmonitor' sensor platform
+#       - sensor.date
 
 frontend:
   themes: !include_dir_merge_named themes
@@ -72,9 +73,9 @@ frontend:
   # extra_html_url_es5:
   #   - /local/custom_ui/custom-weather-card.html
 
-discovery:
-  ignore:
-    - panasonic_viera
+# discovery:
+#   ignore:
+#     - panasonic_viera
 
 tts:
   - platform: google
@@ -87,7 +88,7 @@ tado:
 mqtt:
   discovery: true
   discovery_prefix: homeassistant
-  broker: 192.168.10.95
+  broker: localhost
   port: 1883
   client_id: !secret MQTT_CLIENT_ID
   protocol: 3.1
